--- a/index.html
+++ b/index.html
@@ -23,96 +23,96 @@
                         <img src="https://i.imgur.com/W1973wQ.png" alt="Product 1">
                     </div>
                     <div class="product-info">
-                        <h3>Wireless Headphones</h3>
-                        <p class="price">$79.99</p>
+                        <h3>Frame</h3>
+                        <p class="price">$592.26</p>
                     </div>
                 </a>
 
                 <!-- Product 2 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://electroandcompany.com/collections/sx500/products/ec4p-lite-brushless-motor" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop" alt="Product 2">
+                        <img src="https://i.imgur.com/o3aRbkZ.png" alt="Product 2">
                     </div>
                     <div class="product-info">
-                        <h3>Smart Watch</h3>
-                        <p class="price">$199.99</p>
+                        <h3>Motor</h3>
+                        <p class="price">$189.00</p>
                     </div>
                 </a>
 
                 <!-- Product 3 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.amazon.com/USTPO-Motorcycle-Handlebar-Risers-Universal/dp/B0DMF4HXVM/ref=sr_1_53_sspa?crid=Q32QTIXTHZ34&dib=eyJ2IjoiMSJ9.ONi8vFUtX5_f5QBNPF-HEwDHKYp40YYA093m323M3-xWkJG1cByxdYm8vr8bmkyUpfBW8ACSdM2hMT17bCSmykmzlKGArVLM3x-ilO7OZyKwPlNzKqrfFcpiULDrZYvGpCEIyXnqnmzkRPOzAnhsoC9NUeSQ5w8NdjCF29wesMpQmxPRUV1NlJyL6pLdoWV2wuePyfTizDWnNnS1rvxwjwFNWheolRpZQzma3VPLtjVb9n3B3mSbkcfFCZ46lh20x_-mtk7T1hqitHu0e3PX3lk2MoUFJu11s2bSSLPX1l0.9lEGgJKB0ZIqMeTLTEn1x7UI0YrPRyi1e_gS11HGCNw&dib_tag=se&keywords=handle+bar+fork+clamp&qid=1764560919&sprefix=handle+bar+fork+c%2Caps%2C175&sr=8-53-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9idGY&psc=1" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?w=400&h=400&fit=crop" alt="Product 3">
+                        <img src="https://i.imgur.com/OtnARf8.png" alt="Product 3">
                     </div>
                     <div class="product-info">
-                        <h3>Trendy Sunglasses</h3>
-                        <p class="price">$149.99</p>
+                        <h3>BarClamps</h3>
+                        <p class="price">$13.99</p>
                     </div>
                 </a>
 
                 <!-- Product 4 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.amazon.com/DJ-Motor-Aluminum-Handlebar-Handle-2019-2024/dp/B0CWL793GM/ref=sxin_16_pa_sp_search_thematic_sspa?content-id=amzn1.sym.0c23c44b-a15d-4459-8a8b-26f4b0b72963%3Aamzn1.sym.0c23c44b-a15d-4459-8a8b-26f4b0b72963&crid=3PDLRPFZW7NQF&cv_ct_cx=pitbike%2Bbars&keywords=pitbike%2Bbars&pd_rd_i=B0CWL793GM&pd_rd_r=3b77b94c-0f04-48c5-b036-289728c32e1a&pd_rd_w=h4TSn&pd_rd_wg=otM4k&pf_rd_p=0c23c44b-a15d-4459-8a8b-26f4b0b72963&pf_rd_r=7W7NGF4ARCSBAQBFCP5J&qid=1764561278&s=automotive&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=pit%2Bbike%2Bbars%2Cautomotive%2C104&sr=1-3-6024b2a3-78e4-4fed-8fed-e1613be3bcce-spons&aref=EY4wcsPyAW&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM&th=1" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1484704849700-f032a568e944?w=400&h=400&fit=crop" alt="Product 4">
+                        <img src="https://i.imgur.com/Y6Y6LNw.png" alt="Product 4">
                     </div>
                     <div class="product-info">
-                        <h3>Running Shoes</h3>
-                        <p class="price">$89.99</p>
+                        <h3>HandleBars</h3>
+                        <p class="price">$34.99</p>
                     </div>
                 </a>
 
                 <!-- Product 5 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.midwestminimods.com/products/580mm-fork-kit?variant=49259616960814" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?w=400&h=400&fit=crop" alt="Product 5">
+                        <img src="https://i.imgur.com/yNZl24C.png" alt="Product 5">
                     </div>
                     <div class="product-info">
-                        <h3>Fashion Sunglasses</h3>
-                        <p class="price">$129.99</p>
+                        <h3>Forks</h3>
+                        <p class="price">$189.99</p>
                     </div>
                 </a>
 
                 <!-- Product 6 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.midwestminimods.com/products/10-inch-street-wheel-spoke-set" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?w=400&h=400&fit=crop" alt="Product 6">
+                        <img src="https://i.imgur.com/WqZNh4z.png" alt="Product 6">
                     </div>
                     <div class="product-info">
-                        <h3>Designer Bag</h3>
-                        <p class="price">$259.99</p>
+                        <h3>Wheels</h3>
+                        <p class="price">$219.99</p>
                     </div>
                 </a>
 
                 <!-- Product 7 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.midwestminimods.com/products/mini-mods-pit-bike-brake-kit" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1572635196237-14b3f281503f?w=400&h=400&fit=crop" alt="Product 7">
+                        <img src="https://i.imgur.com/gazLDev.png" alt="Product 7">
                     </div>
                     <div class="product-info">
-                        <h3>Elegant Watch</h3>
-                        <p class="price">$179.99</p>
+                        <h3>Brakes</h3>
+                        <p class="price">$109.99</p>
                     </div>
                 </a>
 
                 
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.hotpaxx.com/product-page/fardriver-nd72450-200a-line-450a-phase" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop" alt="Product 8">
+                        <img src="https://i.imgur.com/t9nCL6m.png" alt="Product 8">
                     </div>
                     <div class="product-info">
-                        <h3>Premium Camera</h3>
-                        <p class="price">$599.99</p>
+                        <h3>Controller</h3>
+                        <p class="price">$169.00</p>
                     </div>
                 </a>
 
                 <!-- Product 9 -->
-                <a href="https://www.amazon.com" class="product-card" target="_blank">
+                <a href="https://www.hotpaxx.com/product-page/72v-24ah-150a-bomb-moto-battery" class="product-card" target="_blank">
                     <div class="product-image">
-                        <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop" alt="Product 9">
+                        <img src="https://i.imgur.com/QsK7ynZ.png" alt="Product 9">
                     </div>
                     <div class="product-info">
-                        <h3>Tech Backpack</h3>
-                        <p class="price">$99.99</p>
+                        <h3>Battery</h3>
+                        <p class="price">$619.00</p>
                     </div>
                 </a>
             </div>
@@ -121,7 +121,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Product Showcase. All rights reserved.</p>
+            <p>&copy; 2025 RazorXmasBuild. Made By Rafe.</p>
         </div>
     </footer>
 </body>
