Added aesthetic top banner with Learn More button - positioned above header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Top Banner with Learn More Button -->
+    <div class="top-banner">
+        <div class="banner-content">
+            <p class="banner-text">Discover Our Premium Collection</p>
+            <button class="btn-learn-more-banner">Learn More</button>
+        </div>
+    </div>
+
     <header>
         <div class="container">
             <h1>RazorBuild</h1>
@@ -26,7 +34,6 @@
                         <div class="product-info">
                             <h3>Frame</h3>
                             <p class="price">$592.26</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -40,7 +47,6 @@
                         <div class="product-info">
                             <h3>Motor</h3>
                             <p class="price">$189.00</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -54,7 +60,6 @@
                         <div class="product-info">
                             <h3>BarClamps</h3>
                             <p class="price">$13.99</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -68,7 +73,6 @@
                         <div class="product-info">
                             <h3>HandleBars</h3>
                             <p class="price">$34.99</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -82,7 +86,6 @@
                         <div class="product-info">
                             <h3>Forks</h3>
                             <p class="price">$189.99</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -96,7 +99,6 @@
                         <div class="product-info">
                             <h3>Wheels</h3>
                             <p class="price">$219.99</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -110,7 +112,6 @@
                         <div class="product-info">
                             <h3>Brakes</h3>
                             <p class="price">$109.99</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -124,7 +125,6 @@
                         <div class="product-info">
                             <h3>Controller</h3>
                             <p class="price">$169.00</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
@@ -138,7 +138,6 @@
                         <div class="product-info">
                             <h3>Battery</h3>
                             <p class="price">$619.00</p>
-                            <button class="btn-learn-more">Learn More</button>
                         </div>
                     </a>
                 </div>
