--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Top Banner with Learn More Button -->
     <div class="top-banner">
         <div class="banner-content">
-            <p class="banner-text">Discover Our Premium Collection</p>
+            <p class="banner-text">Razor #1 Xmas Present</p>
             <button class="btn-learn-more-banner">Learn More</button>
         </div>
     </div>
