--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     <div class="about-container">
         <div class="about-content">
             <h1>Why I Want This for Xmas</h1>
-            <p>For xmas, I’d really love a stunt modded Razor, I know I already have a bike but it would be nice having a second one that I can ride with the family and let it become a wheelie machine. It’s one of the most fun things everrr and having a stunt one would let me try different build, and learn how to wheelie. I’m not asking for a new PC because I’m happy with what I have and getting another Razor would mean a lot you can ride with me. It isn’t replacing my current one it would just allow me to learn wheelies easier and have fun with the family riding!</p>
+            <p>For xmas, I’d really love a gaming Setup</p>
             <a href="index.html" class="back-btn">← Back to list</a>
         </div>
     </div>
