--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RazorBuild By Rafe</title>
+    <title>Xmas List By Rafe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,15 +11,15 @@
     
     <div class="top-banner">
         <div class="banner-content">
-            <p class="banner-text">Razor #1 Xmas Present</p>
+            <p class="banner-text">Gaming Setup #1 Xmas Present</p>
             <a href="about.html" class="btn-learn-more-banner">Learn Why</a>
         </div>
     </div>
 
     <header>
         <div class="container">
-            <h1>RazorBuild</h1>
-            <p class="subtitle">Stunt Xmas Build</p>
+            <h1>Gaming Setup</h1>
+            <p class="subtitle">Xmas List</p>
         </div>
     </header>
 
@@ -28,13 +28,13 @@
             <div class="products-grid">
                 
                 <div class="product-card">
-                    <a href="https://www.amazon.com/Razor-Rocket-McGrath-Electric-Motocross/dp/B083G8KNZ5" target="_blank" class="product-link">
+                    <a href="https://www.cyberpowerpc.com/system/GeForce-Elite-Gaming-PC" target="_blank" class="product-link">
                         <div class="product-image">
-                            <img src="https://i.imgur.com/W1973wQ.png" alt="Product 1">
+                            <img src="https://www.cyberpowerpc.com/images/cs/cpprism360v/sil_sitewide_800x800.jpg" alt="Product 1">
                         </div>
                         <div class="product-info">
                             <h3>Frame</h3>
-                            <p class="price">$592.26</p>
+                            <p class="price">$2099.00</p>
                         </div>
                     </a>
                 </div>
