--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <img src="https://www.cyberpowerpc.com/images/cs/cpprism360v/sil_sitewide_800x800.jpg" alt="Product 1">
                         </div>
                         <div class="product-info">
-                            <h3>Frame</h3>
+                            <h3>GamingPc</h3>
                             <p class="price">$2099.00</p>
                         </div>
                     </a>
@@ -41,12 +41,12 @@
 
                 
                 <div class="product-card">
-                    <a href="https://electroandcompany.com/collections/sx500/products/ec4p-lite-brushless-motor" target="_blank" class="product-link">
+                    <a href="https://www.amazon.com/Bestier-Outlets-Reversible-Shelves-Headset/dp/B0CF9DJ1QX/ref=sxin_27_pa_sp_search_thematic-asin_sspa?content-id=amzn1.sym.bdf0d58e-1a67-443f-b541-8da7df7d3980%3Aamzn1.sym.bdf0d58e-1a67-443f-b541-8da7df7d3980&crid=U5HI8E7S3I9&cv_ct_cx=gaming%2Bdesk&keywords=gaming%2Bdesk&pd_rd_i=B0CF9DJ1QX&pd_rd_r=abfc9427-cafe-40d4-a25b-3235e027646e&pd_rd_w=2xh41&pd_rd_wg=MbD5v&pf_rd_p=bdf0d58e-1a67-443f-b541-8da7df7d3980&pf_rd_r=4V4VM3A22STY8QXMD8M2&qid=1764627060&s=home-garden&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=gaming%2Bdesk%2Cgarden%2C133&sr=1-2-baa1f287-65d3-41a3-a655-8bbba0531537-spons&aref=4ygJOncd5d&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM&th=1" target="_blank" class="product-link">
                         <div class="product-image">
-                            <img src="https://i.imgur.com/o3aRbkZ.png" alt="Product 2">
+                            <img src="https://m.media-amazon.com/images/I/81ZWc18PcsL._AC_SL1500_.jpg" alt="Product 2">
                         </div>
                         <div class="product-info">
-                            <h3>Motor</h3>
+                            <h3>Desk</h3>
                             <p class="price">$189.00</p>
                         </div>
                     </a>
