--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why I Want This for Xmas - RazorBuild</title>
+    <title>Why I Want This for Xmas - GamingPc</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         .about-container {
